<resources>
    <string name="app_name">MoviesApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>

    <!--> Values for drawer menu in main activity <-->
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="guest_login_tip">You are logged in as guest.</string>
    <string name="sign_in_tip">Sign in to access all features.</string>
    <string name="movies_main_menu_item">Movies</string>
    <string name="watchlist_main_menu_item">Watchlist</string>
    <string name="favorites_main_menu_item">Favorites</string>
    <string name="profile_main_menu_item">My profile</string>

    <string name="more_main_menu_item">More</string>
    <string name="about_us_main_menu_item">About us</string>
    <string name="settings_main_menu_item">Settings</string>
    <string name="login_main_menu_item">Login</string>
    <string name="logout_main_menu_item">Logout</string>

    <!--> Values for filter navigation menu in main activity <-->
    <string name="genres_filter_menu_item">Genres</string>
    <string name="action_filter_menu_item">Action</string>
    <string name="adventure_filter_menu_item">Adventure</string>
    <string name="animation_filter_menu_item">Animation</string>
    <string name="comedy_filter_menu_item">Comedy</string>
    <string name="crime_filter_menu_item">Crime</string>
    <string name="documentary_filter_menu_item">Documentary</string>
    <string name="drama_filter_menu_item">Drama</string>
    <string name="family_filter_menu_item">Family</string>
    <string name="fantasy_filter_menu_item">Fantasy</string>
    <string name="foreign_filter_menu_item">Foreign</string>
    <string name="history_filter_menu_item">History</string>
    <string name="horror_filter_menu_item">Horror</string>
    <string name="music_filter_menu_item">Music</string>
    <string name="mystery_filter_menu_item">Mystery</string>
    <string name="romance_filter_menu_item">Romance</string>
    <string name="science_fiction_filter_menu_item">Science Fiction</string>
    <string name="tv_movie_filter_menu_item">TV Movie</string>
    <string name="thriller_filter_menu_item">Thriller</string>
    <string name="war_filter_menu_item">War</string>
    <string name="western_filter_menu_item">Western</string>

    <string name="sort_by_filter_menu_item">Sort by</string>

    <string name="popularity_filter_menu_item">Popularity</string>
    <string name="rating_filter_menu_item">Rating</string>
    <string name="revenue_filter_menu_item">Revenue</string>

    <!--> Values for keys in GenreMap <-->
    <string name="action_key" translatable="false">Action</string>
    <string name="adventure_key" translatable="false">Adventure</string>
    <string name="animation_key" translatable="false">Animation</string>
    <string name="comedy_key" translatable="false">Comedy</string>
    <string name="crime_key" translatable="false">Crime</string>
    <string name="documentary_key" translatable="false">Documentary</string>
    <string name="drama_key" translatable="false">Drama</string>
    <string name="family_key" translatable="false">Family</string>
    <string name="fantasy_key" translatable="false">Fantasy</string>
    <string name="foreign_key" translatable="false">Foreign</string>
    <string name="history_key" translatable="false">History</string>
    <string name="horror_key" translatable="false">Horror</string>
    <string name="music_key" translatable="false">Music</string>
    <string name="mystery_key" translatable="false">Mystery</string>
    <string name="romance_key" translatable="false">Romance</string>
    <string name="science_fiction_key" translatable="false">Science Fiction</string>
    <string name="tv_movie_key" translatable="false">TV Movie</string>
    <string name="thriller_key" translatable="false">Thriller</string>
    <string name="war" translatable="false">War</string>
    <string name="western" translatable="false">Western</string>

    <!-- values for messages in Navigation Menu -->
    <string name="please_login">Please login in order to use this feature</string>

    <!--> Movie details text <-->
    <string name="i_just_saw">I just saw "</string>
    <string name="a_great_movie">", a great movie!</string>
    <string name="download_suggestion"> Download this app to know more inside details of movies.</string>
    <string name="link"> Link: http://play.google.com</string>

    <!--> Details card view <-->
    <string name="details_label">Details</string>
    <string name="rating_label">Rating</string>
    <string name="released_label">Released</string>
    <string name="runtime_label">Runtime</string>
    <string name="genres_label">Genres</string>
    <string name="original_language_label">Original language</string>
    <string name="runtime_tag">min</string>

    <!--> Trailers card view <-->
    <string name="trailers_label">Trailers</string>

    <!--> Casts card view <-->
    <string name="casts_label">Casts</string>

    <!--> Values for original language <-->
    <string name="original_en_language">English</string>
    <string name="title_activity_cast_details">CastDetailsActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <!--> Labels for Movie Description Details in ViewPager <-->
    <string name="view_pager_movie_description_title">Description</string>
    <string name="view_pager_cast_list_title">Cast</string>
    <string name="view_pager_crew_list_title">Crew</string>
    <string name="rate">Rate</string>

    <string name="rate_success">Your Selected Ratings  :</string>

    <!--> Labels for Cast List Item in Movie Description Details in ViewPager <-->
    <string name="plain_text_for_preview">Preview</string>

    <!--> Labels for Details Cast ViewPager <-->
    <string name="view_pager_title_biography">Biography</string>
    <string name="view_pager_title_movies">Movies</string>

    <!--> Details Casts card view <-->
    <string name="biography_label">Biography</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--> Preference key <-->
    <string name="filter_preferences" translatable="false">filter_preferences</string>
    <string name="auth" translatable="false">auth</string>
    <string name="request_token" translatable="false">request_token</string>
    <string name="session_id" translatable="false">session_id</string>
    <string name="account_id" translatable="false">account_id</string>

    <!-- Empty Movies -->
    <string name="empty_movie_list_and_no_connection">No Movie Information Available. Please check your internet connection.</string>">

    <!-- Loading -->
    <string name="loading">Loading...</string>">

    <!-- Titles for toasts in MovieDetailsActivity -->
    <string name="deleted_from_favorits">This movie was deleted from your favorite list</string>
    <string name="deleted_from_watchlist">This movie was deleted from your watchlist</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Titles for About Us page -->
    <string name="about_rate_app">Rate app on the Play Store</string>
    <string name="about_share_your_ideas">Let us know how improve the app</string>
    <string name="about_invite_friends">Invite your friends</string>
    <string name="about_us">About us</string>

    <!-- Action Bar titles in the main activity -->
    <string name="movies_actionbar_title">Movies</string>
    <string name="favorites_actionbar_title">Favorites</string>
    <string name="watchlist_actionbar_title">Watchlist</string>

    <!-- Dialogs-->
    <string name="dialog_bad_connection_title">Bad connection</string>
    <string name="dialog_bad_connection_label">Please, check your internet connection and try again later</string>
    <string name="dialog_bad_connection_try_again">Try again</string>
    <string name="dialog_bad_connection_cancel">Cancel</string>

    <!-- Action Bar titles in others activity-->
    <string name="login_actionbar_title">Login</string>

    <string name="star_wars_1">In "Star Wars" many of the buildings constructed to be used in shots of Tatooine are still standing in Tunisia. In fact, some of them are still used by locals.</string>
    <string name="star_wars_2">In "Star Wars" the Jawa language is based on a sped-up version of the Zulu language.</string>
    <string name="star_wars_3">Star Wars: Episode II - Attack of the Clones was labelled as “Cue Ball” when it shipped to theaters.</string>
    <string name="star_wars_4">The cow-like creature seen grazing in the fields behind Anakin and Padmé in Star Wars: Episode II - Attack of the Clones can be seen again as an asteroid later in the film.</string>
    <string name="star_wars_5">Star Wars: Episode III - Revenge of the Sith was labelled as “The Bridge” when it shipped to theaters.</string>

    <string name="hunger_games_1">The Hunger Games is currently the third-most highlighted Kindle book of all time. The Bible is first.</string>
    <string name="hunger_games_2">The first Hunger Games movie was banned in Vietnam.</string>
    <string name="hunger_games_3">The Hunger Games has been translated in 51 different languages.</string>

    <string name="jurassic_park_1">In "Jurassic Park" in order to create the ripple effect in the glass of water, a guitar string was attached to the underside of the dashboard of the jeep and strung.</string>
    <string name="jurassic_park_2">In "Jurassic Park" the screams in this scene are genuine — the animatronic T. rex was not supposed to break the plexiglass.</string>
    <string name="jurassic_park_3">The "Jurassic Park" has a running time of 127 minutes — but includes only 15 minutes of actual dinosaur footage.</string>
    <string name="jurassic_park_4">In "Jurassic Park" Harrison Ford turned down the role of Dr. Alan Grant. </string>

</resources>
